--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@
 }
 
 main {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 960px;
 }
 
 .list-box {
-  padding: 50px 0;
+  margin-bottom: 50px;
 }
 
 .list {
   padding: 20px;
+  list-style: none;
 }
 
 .list:nth-child(odd) {
@@ -22,13 +23,11 @@ main {
 }
 
 .box-box {
-  padding-bottom: 50px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .box {
-  display: inline-block;
   width: 30%;
   height: 200px;
   margin: 0 5% 40px 0;
@@ -39,8 +38,12 @@ main {
   margin-right: 0;
 }
 
-.box:nth-child(1),
+.box:first-child,
 .box:nth-child(5),
-.box:nth-child(9) {
+.box:last-child {
   background-color: orange;
+}
+
+.box:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
